--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,4 +17,5 @@ extra_javascript:
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 
 nav:
-    - Home: azure1.md
+    - Lokal: lokal.md
+    - Automatisierung: automat.md
