--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,11 +20,30 @@ jobs:
         with:
           name: Package
           path: staging
+      - name: Cache files 
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-files
+        with:
+          path: | 
+            ./target
+          key: $build-${{ env.cache-name }}-${{ github.event.head_commit.message }}
+    
 
   docker:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: Cache files 
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-files
+        with:
+          path: | 
+            ./target
+          key: $build2-${{ env.cache-name }}-${{ github.event.head_commit.message }}
+          restore-keys: |
+            $build-${{ env.cache-name }}-${{ github.event.head_commit.message }}
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v2
