--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,8 @@ jobs:
         with:
           name: Package
           path: staging
+      - name: list files
+        run: 'ls -laR'
       - name: Cache files 
         uses: actions/cache@v2
         env:
@@ -27,6 +29,7 @@ jobs:
         with:
           path: | 
             ./target
+            .
           key: $build-${{ env.cache-name }}-${{ github.event.head_commit.message }}
     
 
@@ -41,9 +44,12 @@ jobs:
         with:
           path: | 
             ./target
+            .
           key: $build2-${{ env.cache-name }}-${{ github.event.head_commit.message }}
           restore-keys: |
             $build-${{ env.cache-name }}-${{ github.event.head_commit.message }}
+      - name: list files
+        run: 'ls -laR'
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v2
