--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,6 +50,8 @@ jobs:
             $build-${{ env.cache-name }}-${{ github.event.head_commit.message }}
       - name: list files
         run: 'ls -laR'
+      - name: copy file
+        run: 'cp ./target/spring-boot-web-socket-0.0.1-SNAPSHOT.jar springbootwebsocketdemo.jar'        
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v2
