--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,6 +52,8 @@ jobs:
         run: 'ls -laR'
       - name: copy file
         run: 'cp ./target/spring-boot-web-socket-0.0.1-SNAPSHOT.jar springbootwebsocketdemo.jar'        
+      - name: list files
+        run: 'ls -la'
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v2
