--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,10 +66,10 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-          file: ./Dockerfile
       -
         name: Build and push
         uses: docker/build-push-action@v4
         with:
+          context: ./
           push: true
           tags: tuttas/webchat:latest
