--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,13 +20,14 @@ deploy:
     stage: deploy
     script:
         - mvn package
+        - cp target\spring-boot-web-socket-0.0.1-SNAPSHOT.jar 
     tags: 
         - myrunner
     only:
         - master
     artifacts:
         paths:
-            - target\spring-boot-web-socket-0.0.1-SNAPSHOT.jar
+            - target\spring-boot-web-socket-0.0.1-SNAPSHOT.jar springbootwebsocketdemo.jar
 
 builddocker:
     image: docker:latest
