--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ deploy:
     stage: deploy
     script:
         - mvn package
-        - cp target\spring-boot-web-socket-0.0.1-SNAPSHOT.jar springbootwebsocketdemo.jar
+        - cp target/spring-boot-web-socket-0.0.1-SNAPSHOT.jar springbootwebsocketdemo.jar
     tags: 
         - myrunner
     only:
