--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,8 +20,7 @@ deploy:
     stage: deploy
     script:
         - mvn package
-        - cp target/spring-boot-web-socket-0.0.1-SNAPSHOT.jar ./springbootwebsocketdemo.jar
-        - ls -la
+        - ls -laR
     tags: 
         - myrunner
     only:
@@ -34,6 +33,7 @@ builddocker:
     image: docker:latest
     stage: builddocker
     script:
+      - cp target/spring-boot-web-socket-0.0.1-SNAPSHOT.jar ./springbootwebsocketdemo.jar
       - ls -la
       - echo "$LOCAL_REGISTRY" | docker login -u tuttas --password-stdin
       - docker build -t tuttas/springbootwebsocketdemoapplication .
